python: fastapi transaction done - readme undone

--- a/projects/python/10.fastapi-transaction/Makefile
+++ b/projects/python/10.fastapi-transaction/Makefile
@@ -17,3 +17,16 @@ reset-db:
 	rm -f app.db
 	alembic upgrade head
 	python -m app.seed
+
+dev-install:
+	pip install -r dev-requirements.txt
+
+lint:
+	ruff check app tests
+
+format:
+	black app tests
+	ruff check app tests --fix
+
+typecheck:
+	mypy app
